--- a/index.html
+++ b/index.html
@@ -6,16 +6,33 @@
   <title>DOOSH HUB</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="assets/logo.png" />
+  
   <style>
-    /* Remove background color and gradient animation */
+    /* Fire Neon Background */
     body {
-      background-color: #2d3748; /* Gray background */
+      background: #0f0f0f;
       font-family: 'Roboto', sans-serif;
       overflow-x: hidden;
       color: white;
+      animation: fireGlow 10s infinite alternate;
     }
 
-    /* Scrollable Navbar */
+    @keyframes fireGlow {
+      0% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset;
+      }
+      50% {
+        background-color: #1a1a1a;
+        box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset;
+      }
+      100% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
+      }
+    }
+
+    /* Navbar */
     header {
       position: fixed;
       top: 0;
@@ -30,18 +47,16 @@
       padding: 10px;
     }
 
-    /* Carousel Styling */
+    /* Carousel */
     .carousel-container {
       position: relative;
       width: 100%;
       overflow: hidden;
     }
-
     #carousel {
       display: flex;
       transition: transform 0.7s ease-in-out;
     }
-
     #carousel a {
       flex-shrink: 0;
       width: 300px;
@@ -51,7 +66,6 @@
       overflow: hidden;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     }
-
     #carousel img {
       width: 100%;
       height: 100%;
@@ -64,19 +78,16 @@
       border-radius: 15px;
       overflow: hidden;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-      background-color: #1a202c; /* Dark Background for Cards */
+      background-color: #1a202c;
     }
-
     .anime-card:hover {
       transform: translateY(-10px);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 10px 30px #ff00ff;
       border: 2px solid #ff00ff;
     }
-
     .anime-card img {
       transition: transform 0.3s ease;
     }
-
     .anime-card:hover img {
       transform: scale(1.1);
     }
@@ -92,18 +103,12 @@
       height: 250px;
       margin-bottom: 20px;
     }
-    .skeleton-text {
-      width: 80%;
-      height: 24px;
-      margin-top: 10px;
-    }
-
     @keyframes shimmer {
       0% { background-position: -1000px 0; }
       100% { background-position: 1000px 0; }
     }
 
-    /* Smaller Ad Box */
+    /* Ad Box */
     #adBox {
       position: fixed;
       bottom: 10px;
@@ -118,7 +123,6 @@
       transition: opacity 0.5s ease;
       display: block;
     }
-
     #closeAd {
       position: absolute;
       top: 6px;
@@ -126,8 +130,7 @@
       background: transparent;
       border: none;
       color: white;
-      font-size: 1.25rem;
-      line-height: 1;
+      font-size: 1.5rem;
       cursor: pointer;
     }
 
@@ -135,31 +138,37 @@
     #scrollToTop {
       position: fixed;
       bottom: 10px;
-      right: 10px;
+      right: 70px;
       background-color: #ff00ff;
       color: white;
       border: none;
-      padding: 10px 20px;
+      padding: 12px 18px;
       border-radius: 50%;
+      font-size: 20px;
       cursor: pointer;
-      font-size: 18px;
       display: none;
     }
 
     /* Welcome Message */
     .welcome-message {
-      animation: welcomeAnimation 2s ease-in-out;
+      animation: welcomeAnimation 2s ease-in-out, neonFire 1.5s infinite alternate;
       text-align: center;
-      margin-top: 100px;
-      font-size: 3rem;
+      margin-top: 120px;
+      font-size: 3.5rem;
+      font-weight: bold;
       color: #ff00ff;
+      text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff4500, 0 0 30px #ff4500;
     }
-
     @keyframes welcomeAnimation {
       0% { opacity: 0; transform: translateY(-30px); }
       100% { opacity: 1; transform: translateY(0); }
     }
+    @keyframes neonFire {
+      0% { text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff4500, 0 0 30px #ff4500; }
+      100% { text-shadow: 0 0 20px #ff00ff, 0 0 30px #ff4500, 0 0 40px #ff4500; }
+    }
   </style>
+
 </head>
 
 <body>
@@ -167,10 +176,10 @@
   <!-- Scroll-to-Top Button -->
   <button id="scrollToTop" onclick="scrollToTop()">↑</button>
 
-  <!-- Header with Shrink on Scroll -->
-  <header id="header" class="p-4 transition-all duration-300 ease-in-out">
+  <!-- Header -->
+  <header id="header" class="p-4">
     <img src="unnamed.png" alt="Doosh Hub Logo" class="w-12 h-12 inline-block" />
-    <input type="text" id="search" placeholder="Search animes,movies,drama.." class="w-1/2 p-2 rounded bg-gray-700 text-white placeholder-gray-400" oninput="filterAnime()" />
+    <input type="text" id="search" placeholder="Search animes, movies, drama..." class="w-1/2 p-2 rounded bg-gray-700 text-white placeholder-gray-400" oninput="filterAnime()" />
   </header>
 
   <!-- Welcome Message -->
@@ -183,10 +192,8 @@
     <div id="carousel"></div>
   </section>
 
-  <!-- Anime List (Skeleton Loader) -->
+  <!-- Anime List -->
   <main class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6" id="animeList">
-    <div class="skeleton skeleton-card"></div>
-    <div class="skeleton skeleton-card"></div>
     <div class="skeleton skeleton-card"></div>
     <div class="skeleton skeleton-card"></div>
     <div class="skeleton skeleton-card"></div>
@@ -198,7 +205,7 @@
     <div class="ad-slot active" id="ad1">
       <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
-    <div class="ad-slot" id="ad2">
+    <div class="ad-slot" id="ad2" style="display:none;">
       <script type="text/javascript">
         atOptions = {
           'key': '38c97041ba09133421880a5339a162a8',
@@ -212,39 +219,15 @@
     </div>
   </div>
 
-  <!-- Anime Data (Automated) -->
+  <!-- Scripts -->
   <script>
     const animeData = {
-      "dragon-ball": {
-        title: "Dragon Ball Prison Planet Full Movie",
-        cover: "unnamed (4).jpg",
-        link: "anime/dragon-ball.html"
-      },
-      "Shinchan The Legend of Ninja Mononoke (Hindi)": {
-        title: "Shinchan The Legend of Ninja Mononoke (Hindi)",
-        cover: "unnamed (1).jpg",
-        link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"
-      },
-      "WIND BREAKER Season 2 in hindi": {
-        title: "WIND BREAKER S02E01 1080",
-        cover: "WIND BREAKER S2.jpg",
-        link: "anime/WIND BREAKER S2.html"
-      },
-      "Tokyo Revengers season 1": {
-        title: "Tokyo Revengers season 1",
-        cover: "unnamed (2).jpg",
-        link: "anime/Tokyo Revengers season 1.html"
-      },
-      "do patti": {
-        title: "Do Patti Movie",
-        cover: "Do-patti-(2024)-hindi-movie.jpg",
-        link: "anime/do pati.html"
-      },
-      "FLIGHT 914 - Hollywood Action Movie ": {
-        title: "FLIGHT 914 - Hollywood Action Movie ",
-        cover: "get.jpg",
-        link: "anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html"
-      }
+      "dragon-ball": { title: "Dragon Ball Prison Planet Full Movie", cover: "unnamed (4).jpg", link: "anime/dragon-ball.html" },
+      "shinchan-ninja": { title: "Shinchan The Legend of Ninja Mononoke (Hindi)", cover: "unnamed (1).jpg", link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html" },
+      "wind-breaker": { title: "WIND BREAKER Season 2 in Hindi", cover: "WIND BREAKER S2.jpg", link: "anime/WIND BREAKER S2.html" },
+      "tokyo-revengers": { title: "Tokyo Revengers Season 1", cover: "unnamed (2).jpg", link: "anime/Tokyo Revengers season 1.html" },
+      "do-patti": { title: "Do Patti Movie", cover: "Do-patti-(2024)-hindi-movie.jpg", link: "anime/do pati.html" },
+      "flight-914": { title: "FLIGHT 914 - Hollywood Action Movie", cover: "get.jpg", link: "anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html" }
     };
 
     function loadAnimeCards() {
@@ -254,9 +237,8 @@
         const card = document.createElement('a');
         card.href = a.link;
         card.className = "anime-card p-4 block";
-        card.innerHTML = `
-          <img src="${a.cover}" alt="${a.title}" class="w-full h-40 object-cover rounded mb-2">
-          <h2 class="text-xl font-bold text-center">${a.title}</h2>`;
+        card.innerHTML = `<img src="${a.cover}" alt="${a.title}" class="w-full h-40 object-cover rounded mb-2">
+                          <h2 class="text-xl font-bold text-center">${a.title}</h2>`;
         list.appendChild(card);
       });
     }
@@ -284,7 +266,6 @@
       carouselIndex++;
       carousel.style.transition = "transform 0.7s ease-in-out";
       carousel.style.transform = `translateX(-${carouselIndex * itemWidth}px)`;
-
       if (carouselIndex >= items.length - 1) {
         setTimeout(() => {
           carousel.style.transition = "none";
@@ -293,7 +274,6 @@
         }, 700);
       }
     }
-
     setInterval(autoSlide, 3000);
 
     function filterAnime() {
@@ -317,13 +297,12 @@
       }
     };
 
-    let currentAd = 1;
-    setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : 1;
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 10000);
+    // Close ad functionality
+    document.getElementById('closeAd').addEventListener('click', function() {
+      document.getElementById('adBox').style.display = 'none';
+    });
 
+    // Initial load
     window.onload = function() {
       loadCarousel();
       setTimeout(loadAnimeCards, 1500);
