--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DOOSH HUB</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="assets/logo.png" />
-  
+
+  <!-- Favicon -->
+  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
+
+  <!-- Open Graph Meta (for Facebook, WhatsApp sharing) -->
+  <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
+  <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
+  <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
+  <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
+  <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
+  <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
+
   <style>
     /* Fire Neon Background */
     body {
@@ -16,20 +31,10 @@
       color: white;
       animation: fireGlow 10s infinite alternate;
     }
-
     @keyframes fireGlow {
-      0% {
-        background-color: #0f0f0f;
-        box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset;
-      }
-      50% {
-        background-color: #1a1a1a;
-        box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset;
-      }
-      100% {
-        background-color: #0f0f0f;
-        box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
-      }
+      0% { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset; }
+      50% { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset; }
+      100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset; }
     }
 
     /* Navbar */
@@ -178,7 +183,7 @@
 
   <!-- Header -->
   <header id="header" class="p-4">
-    <img src="unnamed.png" alt="Doosh Hub Logo" class="w-12 h-12 inline-block" />
+    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 inline-block rounded-full" />
     <input type="text" id="search" placeholder="Search animes, movies, drama..." class="w-1/2 p-2 rounded bg-gray-700 text-white placeholder-gray-400" oninput="filterAnime()" />
   </header>
 
@@ -297,12 +302,10 @@
       }
     };
 
-    // Close ad functionality
     document.getElementById('closeAd').addEventListener('click', function() {
       document.getElementById('adBox').style.display = 'none';
     });
 
-    // Initial load
     window.onload = function() {
       loadCarousel();
       setTimeout(loadAnimeCards, 1500);
