Update and rename windbreakerseason1.html to anime/windbreakerseason1.html

--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -161,7 +161,7 @@
         uploadDate: "2025-04-25"
       },{
         title: "wind breaker season 2 episode 1",
-        link: "",
+        link: "anime/WIND BREAKER S2.html",
         description: "wind breaker season 2 latest ",
         uploadDate: "2025-04-25"
       }
